# dwarf_fortress_unfuck

./: .gitignore  CMakeLists.txt  Makefile  README.md  original_df_readme.txt
.github/workflows/: ci.yml
g_src/: KeybindingScreen.cpp  KeybindingScreen.h  ViewBase.cpp  ViewBase.h  basics.cpp  basics.h  bimap.h  command_line.cpp  command_line.h  curses.h  enabler.cpp  enabler.h  enabler_input.cpp  enabler_input.h  endian.h  files.cpp  files.h  find_files.cpp  find_files.h  find_files_posix.cpp  g_basics.h  graphics.cpp  graphics.h  init.cpp  init.h  interface.cpp  interface.h  keybindings.cpp  keybindings.h  mail.hpp  music_and_sound.cpp  music_and_sound_fmodex.cpp  music_and_sound_fmodex.h  music_and_sound_g.h  music_and_sound_openal.cpp  music_and_sound_openal.h  music_and_sound_v.h  platform.h  random.cpp  random.h  (+15 more)
